    - Modelled vapour icons/"fluid icons that have are a little transparent at the bottom"
    - Changed baryte ore recipe to be made in the leaching field, instead of the chemical plant. This was to make the leaching field have more of a purpose, and should place nicely with some changes that will come Later.

  Fixes:
    - Fixed the tech icons of all battery equipment.
    - Fixed module tiers not taking the right amount of circuits.
    - Continued fixing and improving the factoriopedia.
    - Fixed some recipes and technologies using old, extremely old icons.
    - Fixed caesium antimony to chloride having the wrong icon.
    - Fixed heat exchanger 1 being worse then it should be.
    - Fixed heat exchanger 2 not producing the correct temp steam.
    - Fixed steam turbines not being able to take higher temp steam.
    - Moved naptha fuel canisters into their own technology, and fixed them being uncraftable until you unlock a different fuel canister.
    - Gave zinc vapour its own icon.
    - Gave barium vapour its own icon.
    - Fixed radium ore being in the wrong subgroup.
    - Gave copper powder its own icon.
    - Fixed solar panel equipment 3 technology using the tier 2 icon.

---------------------------------------------------------------------------------------------------
Version: 0.6.514
Date: 2025-31-07
  The i'll be able to sit down one day and not have to update the public build Update:

  Changes:
    - Changed P-TM science to use thallium plates, not ore to match with tungsten/titanium.
    - Changed empty canister stack sizes to match the highest stacking fuel canister (50 > 150).
    - Changed spent/empty fuel rod stack sizes to match their fuel counterparts.
    - Doubled stack size of octane fuel canisters.

---------------------------------------------------------------------------------------------------
Version: 0.6.513
Date: 2025-30-07
  The one step forward, two steps inbetween to make sure the first step actually happened Update:
